--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
+    "infinite-scroll": "^4.0.1",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-app": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
