--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-app": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.14.2",
